melhorar na acessibilidade

--- a/principal.html
+++ b/principal.html
@@ -127,7 +127,7 @@
             variações genéticas e bioquímicas das espécies e natureza da psique e/ou comportamento.</p>
             
             <figure align = "center">
-                <img src = "assets\images\Parasagittal_MRI_of_human_head_in_patient_with_benign_familial_macrocephaly_prior_to_brain_injury_(ANIMATED).gif" alt = "Um gif sobre a 'Ressonância magnética parassagital' da cabeça de paciente com macrocefalia familial benigna">
+                <img src = "assets\images\Parasagittal.gif" alt = "Um gif sobre a 'Ressonância magnética parassagital' da cabeça de paciente com macrocefalia familial benigna">
                 <figcaption>Ressonância magnética parassagital da cabeça de paciente com macrocefalia familial benigna</figcaption>
             </figure>
 
